Various cleanups and simplifications